--- a/package.json
+++ b/package.json
@@ -31,17 +31,19 @@
     "messaging"
   ],
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
+    "dev": "bun run src/index.ts",
     "dev:debug": "bun run dev --debug",
-    "build": "bun build src/index.ts --outdir dist --target bun",
+    "build": "bun build src/index.ts --compile --outfile waha-tui",
     "typecheck": "bun x tsc --noEmit",
-    "lint": "eslint src/",
+    "lint": "eslint .",
     "lint:fix": "eslint src/ --fix",
     "format": "prettier --write src/",
     "format:check": "prettier --check src/",
     "check": "bun run typecheck && bun run lint && bun run format:check",
     "fix": "bun run lint:fix && bun run format",
-    "start": "bun run src/index.ts"
+    "start": "bun run src/index.ts",
+    "link:waha-node": "bash scripts/link-waha-node.sh",
+    "unlink:waha-node": "bash scripts/unlink-waha-node.sh"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -56,6 +58,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@muhammedaksam/waha-node": "../waha-node",
     "@opentui/core": "^0.1.61"
   },
   "engines": {
