--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "dev": "bun --watch src/index.ts",
     "dev:debug": "bun dev --debug",
-    "build": "bun build src/index.ts --compile --outfile waha-tui",
+    "build": "bun build src/index.ts --outdir dist --target bun",
     "typecheck": "bun x tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint src/ --fix",
