--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muhammedaksam/waha-tui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TUI client for WhatsApp using WAHA (WhatsApp HTTP API) - manage chats, send messages, and more from your terminal",
   "module": "src/index.ts",
   "type": "module",
@@ -59,7 +59,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@muhammedaksam/waha-node": "^2025.12.2",
+    "@muhammedaksam/waha-node": "^2025.12.2-dev.1",
     "@opentui/core": "^0.1.61",
     "qrcode": "^1.5.4"
   },
