--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@eslint/js": "^9.39.2",
     "@types/bun": "latest",
     "@types/node": "^25.0.3",
+    "@types/node-notifier": "^8.0.5",
     "@types/qrcode": "^1.5.6",
     "eslint": "^9.39.2",
     "jiti": "^2.6.1",
@@ -62,6 +63,7 @@
   "dependencies": {
     "@muhammedaksam/waha-node": "2025.12.2-dev.1",
     "@opentui/core": "^0.1.63",
+    "node-notifier": "^10.0.1",
     "qrcode": "^1.5.4"
   },
   "engines": {
