--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node-notifier": "^8.0.5",
     "@types/qrcode": "^1.5.6",
     "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
     "jiti": "^2.6.1",
     "prettier": "^3.7.4",
     "typescript-eslint": "^8.50.1"
