--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muhammedaksam/waha-tui",
-  "version": "1.4.10",
+  "version": "1.5.0-dev.1",
   "description": "TUI client for WhatsApp using WAHA (WhatsApp HTTP API) - manage chats, send messages, and more from your terminal",
   "module": "src/index.ts",
   "type": "module",
@@ -65,14 +65,14 @@
     "jiti": "^2.6.1",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
-    "typescript-eslint": "^8.50.1"
+    "typescript-eslint": "^8.51.0"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@muhammedaksam/waha-node": "2025.12.2-dev.1",
-    "@opentui/core": "^0.1.63",
+    "@muhammedaksam/waha-node": "^2025.12.3",
+    "@opentui/core": "^0.1.67",
     "node-notifier": "^10.0.1",
     "qrcode": "^1.5.4"
   },
