fix: include patches directory in published package
- Add 'patches' to files list in package.json
- Bump version to 1.5.0-dev.12

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muhammedaksam/waha-tui",
-  "version": "1.5.0-dev.11",
+  "version": "1.5.0-dev.12",
   "description": "TUI client for WhatsApp using WAHA (WhatsApp HTTP API) - manage chats, send messages, and more from your terminal",
   "module": "src/index.ts",
   "type": "module",
@@ -8,7 +8,8 @@
     "waha-tui": "./src/index.ts"
   },
   "files": [
-    "src"
+    "src",
+    "patches"
   ],
   "author": "Muhammed Mustafa AKŞAM <info@muhammedaksam.com.tr> (https://github.com/muhammedaksam)",
   "license": "MIT",
