--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@muhammedaksam/waha-tui",
-  "version": "1.5.0-dev.12",
+  "version": "1.5.0-dev.13",
   "description": "TUI client for WhatsApp using WAHA (WhatsApp HTTP API) - manage chats, send messages, and more from your terminal",
   "module": "src/index.ts",
   "type": "module",
   "bin": {
-    "waha-tui": "./src/index.ts"
+    "waha-tui": "./dist/index.js"
   },
   "files": [
     "src",
-    "patches"
+    "patches",
+    "dist"
   ],
   "author": "Muhammed Mustafa AKŞAM <info@muhammedaksam.com.tr> (https://github.com/muhammedaksam)",
   "license": "MIT",
@@ -49,6 +50,7 @@
     "link:waha-node": "bash scripts/link-waha-node.sh",
     "unlink:waha-node": "bash scripts/unlink-waha-node.sh",
     "migration:create": "bun run scripts/create-migration.ts",
+    "prepublishOnly": "bun run build",
     "prepare": "husky"
   },
   "devDependencies": {
