revert: rollback to v1.5.0-dev.10 (1546aec)

--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@muhammedaksam/waha-tui",
-  "version": "1.5.0-dev.15",
+  "version": "1.5.0-dev.10",
   "description": "TUI client for WhatsApp using WAHA (WhatsApp HTTP API) - manage chats, send messages, and more from your terminal",
   "module": "src/index.ts",
   "type": "module",
   "bin": {
-    "waha-tui": "./dist/index.js"
+    "waha-tui": "./src/index.ts"
   },
   "files": [
-    "src",
-    "patches",
-    "dist"
+    "src"
   ],
   "author": "Muhammed Mustafa AKŞAM <info@muhammedaksam.com.tr> (https://github.com/muhammedaksam)",
   "license": "MIT",
@@ -50,7 +48,6 @@
     "link:waha-node": "bash scripts/link-waha-node.sh",
     "unlink:waha-node": "bash scripts/unlink-waha-node.sh",
     "migration:create": "bun run scripts/create-migration.ts",
-    "prepublishOnly": "bun run build",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -77,8 +74,7 @@
     "@muhammedaksam/waha-node": "^2026.1.1",
     "@opentui-ui/dialog": "^0.0.4",
     "@opentui-ui/toast": "^0.0.5",
-    "@opentui-ui/utils": "^0.0.1",
-    "@opentui/core": "0.1.70",
+    "@opentui/core": "^0.1.72",
     "node-notifier": "^10.0.1",
     "qrcode": "^1.5.4"
   },
@@ -97,10 +93,5 @@
     "*.{json,md}": [
       "prettier --write"
     ]
-  },
-  "patchedDependencies": {
-    "@opentui-ui/dialog@0.0.4": "patches/@opentui-ui%2Fdialog@0.0.4.patch",
-    "@opentui-ui/utils@0.0.1": "patches/@opentui-ui%2Futils@0.0.1.patch",
-    "@opentui-ui/toast@0.0.5": "patches/@opentui-ui%2Ftoast@0.0.5.patch"
   }
 }
