--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@muhammedaksam/waha-node": "^2026.1.4",
+    "@muhammedaksam/waha-node": "2026.1.4-dev.2",
     "@opentui-ui/dialog": "^0.1.2",
     "@opentui-ui/toast": "^0.0.5",
     "@opentui/core": "^0.1.75",
